--- a/galeria.html
+++ b/galeria.html
@@ -11,6 +11,8 @@
         <div class="banner">
             <h1>Galeria de Fotos</h1>
             <h2>eu te amo!!</h2>
+            <br><br>
+            <a href="index.html">Voltar pro menu</a>
         </div>
    <div class="imagens">
     <img src="./imagens/barbura_acordou.jpg">
@@ -20,6 +22,37 @@
     <img src="./imagens/matheusbarburacachorro.jpg">
     <img src="./imagens/barbara_matheusjacarandas.png">
     <img src="./imagens/centrociv.jpg">
+    <img src="./imagens/babipequena.jpg">
+    <img src="./imagens/babipequenina.jpg">
+    <img src="./imagens/zeropontocinco.jpg">
+    <img src="./imagens/bochecha.jpg">
+    <img src="./imagens/bolo.jpg">
+    <img src="./imagens/brasiu.jpg">
+    <img src="./imagens/cabelolindo.jpg">
+    <img src="./imagens/cabelos.jpg">
+    <img src="./imagens/cachinhoflor.jpg">
+    <img src="./imagens/chuva.jpg">
+    <img src="./imagens/chuva2.jpg">
+    <img src="./imagens/cinturinha.jpg">
+    <img src="./imagens/coxuda.jpg">
+    <img src="./imagens/linda.jpg">
+    <img src="./imagens/lindeza.jpg">
+    <img src="./imagens/mariachiquinha.jpg">
+    <img src="./imagens/mcdonaudes1.jpg">
+    <img src="./imagens/mcdonauds2.jpg">
+    <img src="./imagens/mcdonauds3.jpg">
+    <img src="./imagens/mcdonauds4.jpg">
+    <img src="./imagens/mcdonauds5.jpg">
+    <img src="./imagens/mcdonauds6.jpg">
+    <img src="./imagens/mininaburra.jpg">
+    <img src="./imagens/narizinho.jpg">
+    <img src="./imagens/olhinhos.jpg">
+    <img src="./imagens/onibus.jpg">
+    <img src="./imagens/sadgirl.jpg">
+    <img src="./imagens/sorrisolindo.jpg">
+    <img src="./imagens/vestidobranco.jpg">
+    <img src="./imagens/vestidobrancolindo.jpg">
+    <img src="./imagens/perfeita.jpg">
    </div>
 </center>
 </body>
