--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 </div>
     <img src="./imagens/barbara_matheusjacarandas.png">
     <br>
+    <div class="botoes">
     <a href="galeria.html"><button class="btn">Galeria de Fotos</button></a>
+    <a href="diadasmulheres.txt"><button class="btn">Carta - Dia das Mulheres</button></a>
+    <a href="https://textdoc.co/CG3HZedaPE41tAyx"><button class="btn">Carta - 04/03/2024</button></a>
+    <a href="https://textdoc.co/2qASl0XmbK7C5yks"><button class="btn">Carta resposta ao seu poema</button></a>
+    <a href="https://textdoc.co/Miejy2T9Q45nKHkC"><button class="btn">Passaporte</button></a>
+</div>
     <br>
     <div class="pedido">
     <h1>Você aceita namorar comigo?</h1>
